[Init] cpp03-ex03

--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -1,9 +1,14 @@
-NAME := ex00
+NAME := ex03
 SRC := main.cpp \
+			 ClapTrap.cpp \
+			 ScavTrap.cpp \
+			 FragTrap.cpp \
+			 DiamondTrap.cpp
+
 OBJ := $(SRC:.cpp=.o)
 
 CXX := c++
-CXXFLAGS := -Wall -Wextra -Werror -std=c++98
+CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -Wshadow
 
 all: $(NAME)
 
