--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -1,10 +1,10 @@
-NAME := ex00
+NAME := convert
 SRC := main.cpp \
 			 ScalarConverter.cpp
 OBJ := $(SRC:.cpp=.o)
 
 CXX := c++
-CXXFLAGS := -Wall -Wextra -Werror -std=c++98
+CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g -fsanitize=address
 
 all: $(NAME)
 
