--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -13,8 +13,8 @@ check: all
 $(NAME): $(OBJ)
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-%.o: %.c
-	$(CCX) $(CCXFLAGS) -c $^ -o $@
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $^ -o $@
 
 clean:
 	$(RM) $(OBJ)
