--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -16,8 +16,8 @@ check: $(OBJ)
 $(NAME): $(OBJ)
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-%.o: %.c
-	$(CCX) $(CCXFLAGS) -c $^ -o $@
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $^ -o $@
 
 clean:
 	$(RM) $(OBJ)
