--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -13,8 +13,8 @@ check: all
 $(NAME): $(OBJ)
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-%.o: %.c
-	$(CCX) $(CCXFLAGS) -c $^ -o $@
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $^ -o $@
 
 clean:
 	$(RM) $(OBJ)
