completed implementation of merge-insertion sort

--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,15 +1,19 @@
 NAME := PmergeMe
-SRC := main.cpp \
-			 PmergeMe.cpp
+SRC := main.cpp
 OBJ := $(SRC:.cpp=.o)
 
 CXX := c++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98
 
+
 all: $(NAME)
 
 check: all
 	leaks -q -atExit -- ./$(NAME)
+
+debug: CXXFLAGS += -D DEBUG
+debug: re
+
 
 $(NAME): $(OBJ)
 	$(CXX) $(CXXFLAGS) $^ -o $@
